--- a/src/Vista/frmSaldoXSocio.form
+++ b/src/Vista/frmSaldoXSocio.form
@@ -343,10 +343,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Iconos/icon-borrar-saldos.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Borrar Saldos"/>
+                <Property name="text" type="java.lang.String" value="Borrar Todos los Saldos"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBorrarActionPerformed"/>
